--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Node Express Socket MongoDB Backend for Google Docs Clone Application",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon index.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.8.4",
     "socket.io": "^4.8.1"
